<resources>


    <!--登录方式选择-->
    <string name="loginmodule_login_type_by_mobile">手机号</string>
    <string name="loginmodule_login_type_by_wx_chat">微信号</string>
    <string name="loginmodule_login_type_only_look">随便看看</string>
    <string name="loginmodule_no_wx_title">没有安装微信</string>
    <string name="loginmodule_no_wx_msg">您的设备没有安装微信，我们自动为您切换成用手机号做为登录方式。</string>
    <string name="loginmodule_change_login_type">切换登录模式</string>

    <!--请输入手机号-->
    <string name="loginmodule_input_mobile_title">注册/登录</string>
    <string name="loginmodule_input_mobile_et_mobileHint">请使用11位手机号</string>
    <string name="loginmodule_input_mobile_btn_next">下一步</string>

    <!--手机号登录-->
    <string name="loginmodule_login_by_mobile_title">欢迎老朋友</string>
    <string name="loginmodule_login_by_mobile_et_passwordHint">请输入密码</string>
    <string name="loginmodule_login_by_mobile_tv_forgetPassword">忘记密码？</string>
    <string name="loginmodule_login_by_mobile_btn_login">登录</string>

    <!--手机号注册-->
    <string name="loginmodule_register_by_mobile_title">新用户，您好！</string>
    <string name="loginmodule_register_by_mobile_btn_reg">注册</string>

    <!--注册协议-->
    <string name="loginmodule_register_desc">注册即同意</string>
    <string name="loginmodule_register_agreement01">《用户协议》</string>
    <string name="loginmodule_register_and">及</string>
    <string name="loginmodule_register_agreement02">《隐私条款》</string>

    <!--绑定手机号-->
    <string name="loginmodule_register_by_wx_chat_title">Hi，请绑定手机</string>
    <string name="loginmodule_register_by_wx_chat_et_mobileHint">请输入您的手机号</string>
    <string name="loginmodule_register_by_wx_chat_et_passwordHint">输入6-16位密码</string>
    <string name="loginmodule_register_by_wx_chat_register">注册</string>
    <string name="loginmodule_register_by_wx_chat_have_bind_wx">该手机号已经绑定了微信账号</string>
    <string name="loginmodule_register_by_wx_chat_loginFailed">账号注册成功，自动登录失败，请尝试手动登录</string>
    <string name="loginmodule_register_by_wx_chat_check_mobile_failed">手机号校验失败</string>
    <string name="loginmodule_register_by_wx_chat_dialog01_title">该号码已绑定过【微信】</string>
    <string name="loginmodule_register_by_wx_chat_dialog01_msg">该手机号已经绑定过微信，请通过手机号登录</string>
    <string name="loginmodule_register_by_wx_chat_dialog01_ok">手机号登录</string>
    <string name="loginmodule_register_by_wx_chat_dialog02_title">该号码已有【账户】</string>
    <string name="loginmodule_register_by_wx_chat_dialog02_msg">该手机号已经注册，如果是您本人，请继续完成绑定</string>
    <string name="loginmodule_register_by_wx_chat_dialog02_ok">继续</string>

    <!--找回密码-->
    <string name="loginmodule_find_password_resetPsd">重置密码</string>
    <string name="loginmodule_find_password_pleaseInputNewPsd">请输入6到16位的新密码</string>
    <string name="loginmodule_find_password_title">请输入手机号</string>
    <string name="loginmodule_find_password_btn_find">找回密码</string>
    <string name="loginmodule_find_password_btn_ok">确认</string>

    <!--通过活体校验找回密码-->
    <string name="loginmodule_check_id_card">验证身份证</string>
    <string name="loginmodule_please_input_id_card_sub_six">请输入（%S）身份证\n前6位数字</string>
    <string name="loginmodule_current_user_name">当前用户</string>
    <string name="loginmodule_check_id_card_failed">身份证校验失败</string>

    <!--短信验证码-->
    <string name="loginmodule_input_phone_code_title">输入验证码</string>
    <string name="loginmodule_input_phone_code_send_code">验证码已发送至</string>
    <string name="loginmodule_input_phone_code_try_again">重发验证码</string>

    <!--绑定邮箱，邮箱验证码-->
    <string name="loginmodule_bind_email_title">请输入绑定的邮箱</string>
    <string name="loginmodule_reset_login_psd_by_email_title">验证邮箱</string>
    <string name="loginmodule_bind_email_or_reset_login_psd_tip">提示：</string>
    <string name="loginmodule_bind_email_or_reset_login_psd_email">邮箱</string>
    <string name="loginmodule_bind_email_or_reset_login_psd_btn_find">通过邮箱找回</string>
    <string name="loginmodule_bind_email_or_reset_login_psd_input_email">请输入您需要绑定的邮箱</string>
    <string name="loginmodule_bind_email_or_reset_login_psd_bind">绑定</string>

    <string name="loginmodule_dialog_useragreement">感谢您使用条管家！我们依据国家法律法规、监管政策及业务情况，出具了相关协议：\n协议1：《条管家用户注册协议》\n协议2：《条管家用户隐私协议》\n协议3：《条管家用户支付协议》\n协议4：《CFCA数字证书服务协议》\n请您务必仔细阅读并透彻理解相关条款内容，确认充分理解并同意后使用条管家相关产品或服务。请点击【同意】即代表您已阅读并同意以上所有协议，如果您不同意，请点【不同意】，我们感谢每一位客户对我们产品的关注与支持。</string>
</resources>
