<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.hm.iou.uikit.HMTopBarView
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/uikit_topbar_height"
        app:bottomDividerIsShow="false"
        app:rightText="@string/base_customer_service"
        app:titleBackground="@color/transparent"
        app:titleText="@string/loginmodule_input_phone_code_title" />

    <TextView
        style="@style/UikitTextView"
        android:minHeight="28dp"
        android:text="@string/loginmodule_input_phone_code_send_code"
        android:textColor="@color/uikit_blue"
        android:textSize="@dimen/textFontSize_22" />


    <TextView
        android:id="@+id/tv_mobile"
        style="@style/UikitTextView"
        android:minHeight="28dp"
        android:textColor="@color/uikit_blue"
        android:textSize="@dimen/textFontSize_22" />

    <com.hm.iou.uikit.keyboard.input.HMInputCodeView
        android:id="@+id/inputCodeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/tv_retryCode"
        style="@style/UikitTextView"
        android:layout_marginTop="12dp"
        android:minHeight="18dp"
        android:minWidth="292dp"
        android:text="@string/loginmodule_input_phone_code_try_again"
        android:textSize="@dimen/textFontSize_13" />


</LinearLayout>






