<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.hm.iou.uikit.HMTopBarView
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/uikit_topbar_height"
        app:bottomDividerIsShow="false"
        app:rightText="@string/base_customer_service"
        app:backIcon="@mipmap/uikit_icon_close_black"
        app:titleBackground="@color/transparent"
        app:titleText="@string/loginmodule_register_by_wx_chat_title" />

    <com.hm.iou.uikit.ClearEditText
        android:id="@+id/et_mobile"
        style="@style/LoginMobile"
        android:hint="@string/loginmodule_register_by_wx_chat_et_mobileHint"
        />

    <View
        style="@style/UikitDivider.Horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_smsCheckCode"
            style="@style/LoginCheckCode" />

        <com.hm.iou.uikit.HMCountDownTextView
            android:id="@+id/tv_getSMSCheckCode"
            style="@style/UikitHMButton.CheckCode"
            android:enabled="false"
            android:gravity="right"
            android:paddingLeft="40dip"
            android:paddingRight="35dip"
            />

    </LinearLayout>

    <View
        style="@style/UikitDivider.Horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp" />

    <com.hm.iou.uikit.ShowHidePasswordEditText
        android:id="@+id/et_password"
        style="@style/LoginPassword"
        android:inputType="textVisiblePassword" />

    <View
        style="@style/UikitDivider.Horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp" />


    <Button
        android:id="@+id/btn_next"
        style="@style/UikitHMButton.Large.Main"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:text="@string/loginmodule_register_by_wx_chat_register" />

    <TextView
        android:id="@+id/tv_register_agreement"
        style="@style/UikitTextView"
        android:paddingBottom="10dip"
        android:paddingTop="16dip"
        android:text="我已阅读并同意“所有协议”"
        android:textColor="@color/uikit_text_auxiliary"
        android:textSize="@dimen/uikit_main_content_text_size" />

</LinearLayout>
